# ccwc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
_codeql_build_dir/: CMakeCache.txt  DartConfiguration.tcl  Makefile  ccwc  cmake_install.cmake
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sample  sample_include-b12d07c.cmake  sample_tests-b12d07c.cmake
ccwc/: algorithms.hpp  countFunctions.hpp  main.cpp
ccwc/include/libccwc/: for_each_character.hpp  run_count_functions.hpp
libcount/include/libcount/: count.hpp
test/: CMakeLists.txt
test/sample/: main.cpp
